--- a/ios/Podfile
+++ b/ios/Podfile
@@ -12,6 +12,8 @@ target 'AwesomeProject' do
     :hermes_enabled => false
   )
 
+  pod 'RNSound', :path => '../node_modules/react-native-sound'
+
   target 'AwesomeProjectTests' do
     inherit! :complete
     # Pods for testing
